<resources>
    <string name="app_name">The MovieDB</string>
    <string name="title">Judul Film</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="user_rating">User Rating</string>
    <string name="image_collapse_toolbar">Image For Collapsing Toolbar</string>
    <string name="image_backdrop">Image For Movie Backdrop</string>
    <string name="favorite">Favorite</string>
    <string name="title_nav_favorite">Favorites</string>
    <string name="title_nav_home">Home</string>
    <string name="title_nav_movie">Movies</string>
    <string name="title_nav_tvshow">Tv Shows</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
