<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   xmlns:tools="http://schemas.android.com/tools"
                                   android:id="@+id/item_tvshow"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:layout_marginLeft="4dp"
                                   android:layout_marginRight="4dp"
                                   android:orientation="vertical"
                                   app:cardCornerRadius="4dp"
                                   app:cardElevation="2dp"
                                   app:cardMaxElevation="2dp"
                                   app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/img_poster_path"
                android:layout_width="92dp"
                android:layout_height="138dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@color/colorImage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"/>

        <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:gravity="start"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_poster_path"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title"/>

        <TextView
                android:id="@+id/tv_first_air_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="start"
                android:textColor="@color/colorTextTertiary"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/tv_overview"
                app:layout_constraintStart_toStartOf="@+id/tv_overview"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview"
                tools:text="@string/release_date"/>

        <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constrainedWidth="true"
                app:layout_constrainedHeight="true"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="2"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_name"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                tools:text="@string/overview"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>